--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -46,6 +46,21 @@
   font-weight: 600;
   transition: background-color 0.2s;
 }
-.countdownButton:hover {
+.countdownButton:not(:disabled):hover {
   background: var(--blue-dark);
+}
+.countdownButtonActive {
+  background: var(--white-dark);
+  color: var(--title);
+}
+
+.countdownButton:not(:disabled):hover {
+  background: var(--red);
+  color: var(--white);
+}
+
+.countdownButton:disabled {
+  background: var(--white);
+  color: var(--text);
+  cursor: not-allowed;
 }
